# tensorrt-cpp-api

./: .clang-format  CMakeLists.txt
src/: engine.cpp  engine.h
utility/: ElapsedTimer.h  config.hpp  precompiled.hpp  profiler.hpp  slogger.hpp  slogger.hpp.bak  utility.hpp  xlogger.hpp
utility/cmake/: utility.cmake
